--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -6,3 +6,8 @@ author_profile: true
 ---
 
 
+## Education
+* Ph.D. in Operations Management and Statistics, University of Toronto, 2027 (expected).
+* M.S. in Management Sciences, University of Waterloo, 2022.
+* B.S. in Industrial Engineering, Sharif University of Technology, 2019.
+* B.S. in Electrical Engineering, Sharif University of Technology, 2019.
