--- a/index.html
+++ b/index.html
@@ -7,26 +7,53 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div class="container">
-    <header>
-      <h1>Hamid Arzani</h1>
-      <p>
-        Ph.D. Candidate in Operations Management and Statistics<br>
-        Rotman School of Management, University of Toronto
-      </p>
-    </header>
+  <div class="main">
+    <h1>Hamid Arzani</h1>
 
-    <section>
-      <h2>About Me</h2>
-      <p>
-        I am a Ph.D. candidate at the University of Toronto. My research lies at the intersection of service operations, fairness, optimization, and AI.
-      </p>
-    </section>
+    <p>
+      Ph.D. Candidate in Operations Management and Statistics<br>
+      Rotman School of Management, University of Toronto
+    </p>
 
-    <section>
-      <h2>Contact</h2>
-      <p>Email: <a href="mailto:hamid.arzani@utoronto.ca">hamid.arzani@utoronto.ca</a></p>
-    </section>
+    <p>
+      Email: hamid.arzani@utoronto.ca<br>
+      <!-- Uncomment if you have a CV to link -->
+      <!-- <a href="cv.pdf" target="_blank">Curriculum Vitae (PDF)</a> -->
+    </p>
+
+    <hr>
+
+    <h2>Research Interests</h2>
+    <p>
+      Service operations, fairness, queueing theory, AI for healthcare, optimization, learning in service systems, and customer interaction modeling.
+    </p>
+
+    <h2>Publications</h2>
+    <ul>
+      <li>
+        Arzani, H. & Coauthor (2025). <i>Title of Paper</i>, Journal/Conference Name.
+      </li>
+      <li>
+        Arzani, H. (2024). <i>Another Paper Title</i>, Working Paper.
+      </li>
+    </ul>
+
+    <h2>Teaching</h2>
+    <ul>
+      <li>RSM1282 – Operations Management (Winter 2025)</li>
+      <li>RSM1240 – Engineering Economics (Winter 2025)</li>
+    </ul>
+
+    <h2>Service and Leadership</h2>
+    <ul>
+      <li>President, University of Toronto Operations Research Group (UTORG)</li>
+      <li>Student Councillor, Canadian Operational Research Society (CORS)</li>
+    </ul>
+
+    <h2>Other</h2>
+    <p>
+      I occasionally mock myself in Persian and think spring is the best season. I also enjoy analyzing large-scale healthcare systems and playing IGI.
+    </p>
   </div>
 </body>
 </html>
