--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <nav class="navbar">
     <div class="navbar-title">Hamid Arzani</div>
     <div class="navbar-links">
-      <a href="#about">About Me</a>
-      <a href="#research">Research</a>
-      <a href="#publications">Publications</a>
-      <a href="#teaching">Teaching</a>
-      <a href="#contact">Contact</a>
+      <a href="index.html">About Me</a>
+      <a href="research.html">Research</a>
+      <a href="teaching.html">Teaching</a>
+      <a href="service.html">Service</a>
+      <a href="contact.html">Contact</a>
     </div>
   </nav>
 
-  <div class="profile-section" id="about">
+  <div class="profile-section">
     <img src="hamid_photo.png" alt="Hamid Arzani" class="profile-pic" />
     <div class="profile-text">
       <h1>Hamid Arzani</h1>
@@ -30,36 +30,6 @@
         <p><a href="#">Download CV (PDF)</a></p>
       </div>
     </div>
-  </div>
-
-  <div class="content-section" id="research">
-    <h2>Research Overview</h2>
-    <p>
-      My research focuses on service system design, fairness, and customer interaction in AI-powered service environments.
-      I develop decision-making models that blend queueing theory, learning, and optimization to address challenges in healthcare and beyond.
-    </p>
-  </div>
-
-  <div class="content-section" id="publications">
-    <h2>Publications</h2>
-    <ul>
-      <li>Arzani, H. & Coauthor (2025). <i>Title of Paper</i>, Journal/Conference Name.</li>
-      <li>Arzani, H. (2024). <i>Another Paper Title</i>, Working Paper.</li>
-    </ul>
-  </div>
-
-  <div class="content-section" id="teaching">
-    <h2>Teaching</h2>
-    <ul>
-      <li>RSM1282 – Operations Management (Winter 2025)</li>
-      <li>RSM1240 – Engineering Economics (Winter 2025)</li>
-    </ul>
-  </div>
-
-  <div class="content-section" id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:hamid.arzani@utoronto.ca">hamid.arzani@utoronto.ca</a></p>
-    <p>Twitter / Google Scholar links here (optional)</p>
   </div>
 </body>
 </html>
