--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="profile-text">
       <h1>Hamid Arzani</h1>
       <p>Ph.D. Candidate in Operations Management and Statistics<br>
-         Rotman School of Management, University of Toroto</p>
+         Rotman School of Management,  of Toroto</p>
       <div class="profile-contact">
         <p><strong>Email:</strong> hamid.arzani@utoronto.ca</p>
         <p><strong>Office:</strong> RT XXX, Rotman School of Management</p>
