--- a/Teaching.html
+++ b/Teaching.html
@@ -19,7 +19,7 @@
 
   <div class="content-section">
     <h2>Teaching</h2>
-    <p>I have served as a teaching assistant and guest lecturer for several undergraduate and MBA-level courses at the Rotman School of Management.</p>
+    <p>I have served as a teaching assista and guest lecturer for several undergraduate and MBA-level courses at the Rotman School of Management.</p>
 
     <h3>Courses Taught</h3>
     <ul>
