--- a/Teaching.html
+++ b/Teaching.html
@@ -19,16 +19,42 @@
 
   <div class="content-section">
     <h2>Teaching</h2>
-    <p>I have served as a teaching assista and guest lecturer for several undergraduate and MBA-level courses at the Rotman School of Management.</p>
 
-    <h3>Courses Taught</h3>
+    <h3>Teaching Assistant at University of Toronto</h3>
+
+    <p><em>Master of Business Administration (MBA)</em></p>
     <ul>
-      <li><strong>RSM1282 – Operations Management</strong> (Winter 2025)</li>
-      <li><strong>RSM1240 – Engineering Economics</strong> (Winter 2025)</li>
-      <li>Other courses upon request.</li>
+      <li>RSM 1240: Operations Management - Spring 2025</li>
+      <li>RSM 2405: Supply Chain Management - Winter 2024</li>
+      <li>RSM 1282: Statistics for Management - Winter 2024-2025</li>
+      <li>RSM 2408: Modeling and Optimization for Decision Making - Winter 2023</li>
     </ul>
 
-    <p>I enjoy incorporating real-world data and case-based learning into the classroom. I also mentor students on research projects and independent studies.</p>
+    <p><em>Master of Management Analytics (MMA)</em></p>
+    <ul>
+      <li>RSM 8423: Optimizing Supply Chain Management Logistics - Winter 2024</li>
+      <li>RSM 8414: Tools for Probabilistic Models and Prescriptive Analytics - Fall 2023</li>
+    </ul>
+
+    <p><em>Undergraduate</em></p>
+    <ul>
+      <li>RSM 270: Operations Management (Head TA) - Fall 2022-2023</li>
+      <li>MIE 360: Engineering Economics (TA & Guest Lecturer, Evaluation: 4.8/5.0) - 2023-24</li>
+      <li>MIE 360: Systems Modelling and Simulation - Fall 2022</li>
+    </ul>
+
+    <h3>Teaching Assistant at University of Waterloo</h3>
+    <ul>
+      <li>MSCI 263: Managerial Economics - Fall 2021-2022</li>
+      <li>MSCI 719: Operations Analytics - Winter 2022</li>
+      <li>MSCI 333: Simulation Analysis and Design - Winter 2021</li>
+    </ul>
+
+    <h3>Teaching Assistant at Sharif University of Technology</h3>
+    <ul>
+      <li>21-712: Operations Research II - Winter 2018-2019</li>
+      <li>21-521: Statistical Quality Control - Fall 2019</li>
+    </ul>
   </div>
 </body>
 </html>
