--- a/research.html
+++ b/research.html
@@ -18,22 +18,48 @@
   </nav>
 
   <div class="content-section">
-    <h2>Research Overview</h2>
-    <p>
-      My research explores the intersection of service operations, fairness, and AI-powered decision-making. I develop theoretical and data-driven models for service systems, with applications in healthcare, digital platforms, and public services.
-    </p>
+    <h2>Research</h2>
 
-    <h3>Selected Themes</h3>
+    <h3>Papers</h3>
     <ul>
-      <li><strong>Fairness in Queues:</strong> Designing equitable service disciplines using optimization and game theory.</li>
-      <li><strong>Customer Interaction with AI:</strong> Modeling user behavior in response to LLM-based interfaces and decision-support systems.</li>
-      <li><strong>Learning and Scheduling:</strong> Integrating statistical learning into healthcare appointment scheduling and capacity planning.</li>
+      <li>
+        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5190502" target="_blank">
+          <strong>Equity vs. Efficiency in Service Systems with Differentiated Demand</strong>
+        </a>, with Hossein Abouee-Mehrizi and Ming Hu. <em>Working Paper</em>.
+      </li>
+      <li>
+        <strong>From Urban Centers to Rural Areas: The Trade-offs Between Efficiency and Fairness</strong>, with Hossein Abouee-Mehrizi, Saeed Ghadimi, and Mina Torabi Milani. <em>Under Revision</em>.
+      </li>
+      <li>
+        <strong>Reducing Diagnostic Imaging Wait Times: Lessons from a Large-Scale Empirical Analysis</strong>, with Hossein Abouee-Mehrizi, Mohammad Eshraghi, and Benjamin Ravenscroft. <em>Under Review</em>.<br>
+        Runner-up, CORS Best Student Paper Competition, Open Category, 2024.
+      </li>
+      <li>
+        <strong>Multi-Class Advance Patient Scheduling: A Data-driven Robust Approach</strong>, with Hossein Abouee-Mehrizi and Saeed Ghadimi. <em>To be submitted</em>.<br>
+        Accepted to MSOM Healthcare SIG, 2023.<br>
+        Finalist, CORS Best Student Paper Competition, Open Category, 2023.
+      </li>
     </ul>
 
-    <h3>Publications</h3>
+    <h3>Invited Talks</h3>
+    <p><strong>Equity vs. Efficiency in Multi-Class Service Systems</strong></p>
     <ul>
-      <li>Arzani, H. & Coauthor (2025). <i>Title of Paper</i>. Journal/Conference Name.</li>
-      <li>Arzani, H. (2024). <i>Another Paper Title</i>. Working Paper.</li>
+      <li>INFORMS Annual Meeting, Seattle, October 2024</li>
+      <li>CanQueue, Niagara-on-the-Lake, August 2023</li>
+    </ul>
+
+    <p><strong>Multi-Class Advance Patient Scheduling: A Data-Driven Robust Approach</strong></p>
+    <ul>
+      <li>INFORMS Healthcare Conference, Toronto, July 2023</li>
+      <li>INFORMS MSOM Healthcare SIG Conference, Montreal, June 2023</li>
+      <li>CORS, Montreal, May 2023</li>
+      <li>Trans-Atlantic Doctoral Conference, London Business School (LBS), May 2023</li>
+      <li>ORS/INFORMS International Conference, Vancouver, June 2022</li>
+    </ul>
+
+    <p><strong>Reducing Diagnostic Imaging Wait Times: Lessons from a Large-Scale Empirical Analysis</strong></p>
+    <ul>
+      <li>CORS, Montreal, May 2023</li>
     </ul>
   </div>
 </body>
