--- a/service.html
+++ b/service.html
@@ -20,10 +20,20 @@
   <div class="content-section">
     <h2>Service and Leadership</h2>
     <ul>
-      <li>President, University of Toronto Operations Research Group (UTORG)</li>
-      <li>Student Councillor, Canadian Operational Research Society (CORS)</li>
-      <li>Reviewer for journals and conferences in operations management and AI</li>
-      <li>Organizer of student events and academic competitions in applied operations research</li>
+      <li>
+        President, The University of Toronto Operations Research Group
+        (<a href="https://org.mie.utoronto.ca/" target="_blank"><strong>UTORG</strong></a>)
+        <ul>
+          <li>Revived UTORG after its COVID-related inactivity.</li>
+          <li>Please feel free to message me if you like to give a talk at one of our events.</li>
+        </ul>
+      </li>
+      <li><em>Rotman Grouping Optimization Administrator</em>, MBA and MMA, University of Toronto, 2024</li>
+      <li><em>Interviewer</em>, Rotman MMA Program Admission, University of Toronto, 2023</li>
+      <li><em>Rotman Representative at Graduate Student Union</em>, University of Toronto, 2023-2024</li>
+      <li><em>Gradlife Advisory Committee Member</em>, University of Toronto, 2023</li>
+      <li><em>Conference Session Chair</em>, CanQueue, 2023</li>
+      <li><em>Membership</em>: INFORMS, MSOM, POMS, CORS</li>
     </ul>
   </div>
 </body>
