--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
   <div class="profile-section">
     <img src="hamid_photo.png" alt="Hamid Arzani" class="profile-pic" />
     <div class="profile-text">
-      <h1>HamidArzani</h1>
-      <p>Ph.D.Candidate in Operations Management and Statistics<br>
-         Rotman School of ,  of Toroto</p>
+      <h1>Hamid Arzani</h1>
+      <p>Ph.D. Candidate in Operations Management and Statistics<br>
+         Rotman School of Management, University of Toronto</p>
       <div class="profile-contact">
-        <p><strong>Email:</strong> hamid.arzani@utoronto.ca</p>
-        <p><strong>Office:</strong> RT XXX, Rotman School of Management</p>
+        <p><strong>Email:</strong> hamid dot arzani at utoronto dot ca</p>
+        <a href="https://www.rotman.utoronto.ca/programs/phd-program/phd-student-profiles/hamid-arzani/" target="_blank">Hamid Arzani</a><br>
+
       </div>
     </div>
   </div>
