--- a/index.html
+++ b/index.html
@@ -26,9 +26,27 @@
       <div class="profile-contact">
         <p><strong>Email:</strong> hamid dot arzani at utoronto dot ca</p>
         <a href="https://www.rotman.utoronto.ca/programs/phd-program/phd-student-profiles/hamid-arzani/" target="_blank">@ Rotman Profile</a><br>
-
       </div>
     </div>
+  </div>
+
+  <div class="content-section">
+    <h2>About Me</h2>
+    <p>
+      Hi! I am a third-year Ph.D. candidate in Operations Management and Statistics at the
+      <a href="https://www.rotman.utoronto.ca/">Rotman School of Management</a>,
+      University of Toronto. Before my doctoral studies, I obtained a Master’s degree in
+      Management Sciences from the University of Waterloo and completed dual Bachelor’s degrees
+      in Electrical Engineering and Industrial Engineering from Sharif University of Technology.
+    </p>
+
+    <p>
+      My research aims to advance decision-making and resource allocation in healthcare and service operations management.
+      Using methodologies such as data-driven and robust optimization, game theory, and queueing theory, I develop frameworks
+      that address the challenges of uncertainty, demand variability, and capacity limitations. By integrating these tools,
+      my work seeks to enhance operational effectiveness, resilience, and promote fairness and equity across diverse service
+      systems, particularly within healthcare and other public services.
+    </p>
   </div>
 </body>
 </html>
