--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          Rotman School of Management, University of Toronto</p>
       <div class="profile-contact">
         <p><strong>Email:</strong> hamid dot arzani at utoronto dot ca</p>
-        <a href="https://www.rotman.utoronto.ca/programs/phd-program/phd-student-profiles/hamid-arzani/" target="_blank">@ Rotman Profile</a><br>
+        <a href="https://www.rotman.utoronto.ca/programs/phd-program/phd-student-profiles/hamid-arzani/" target="_blank">@ Rotman Profile</a>
       </div>
     </div>
   </div>
