--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
   <div class="content-section">
     <h2>About Me</h2>
-    <p>
+    <p style="text-align: justify;">
       Hi! I am a third-year Ph.D. candidate in Operations Management and Statistics at the
       <a href="https://www.rotman.utoronto.ca/">Rotman School of Management</a>,
       University of Toronto. Before my doctoral studies, I obtained a Master’s degree in
@@ -40,7 +40,7 @@
       in Electrical Engineering and Industrial Engineering from Sharif University of Technology.
     </p>
 
-    <p>
+    <p style="text-align: justify;">
       My research aims to advance decision-making and resource allocation in healthcare and service operations management.
       Using methodologies such as data-driven and robust optimization, game theory, and queueing theory, I develop frameworks
       that address the challenges of uncertainty, demand variability, and capacity limitations. By integrating these tools,
